# flight-performance-analytics-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dagster.yaml  docker-compose.yml  main.py  pyproject.toml  run_config.yaml  template.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/architecture/: data archictecture.drawio  data_flow.drawio
notebooks/: 01_data_exploration.ipynb  02_schema_exploration.ipynb
sql_scripts/clickhouse/: 01_create_databases.sql  02_create_dim_tables.sql  03_create_fact_tables.sql  04_optimizations.sql
sql_scripts/postgres/: 01_create_raw_tables.sql  02_create_staging_tables.sql  03_create_indexes.sql
src/flight_performance_analytics_pipeline/: definitions.py
src/flight_performance_analytics_pipeline/assets/: __init__.py
src/flight_performance_analytics_pipeline/assets/bronze/: __init__.py  airline_delay_checks.py  load_to_postgres.py
src/flight_performance_analytics_pipeline/assets/gold/: __init__.py  dbt_gold_assets.py  dim_airport.py  dim_carrier.py  fact_flight_delays.py  gold_checks.py
src/flight_performance_analytics_pipeline/assets/silver/: __init__.py  dbt_staging_assets.py  staging_checks.py
src/flight_performance_analytics_pipeline/dbt_transformations/: dbt_project.yml  profiles.yml
src/flight_performance_analytics_pipeline/dbt_transformations/macros/: generate_schema_name.sql
src/flight_performance_analytics_pipeline/dbt_transformations/models/: sources.yml
src/flight_performance_analytics_pipeline/dbt_transformations/models/marts/analytics/: carrier_delay_performance.sql  monthly_delay_trends.sql  schema.yml
src/flight_performance_analytics_pipeline/dbt_transformations/models/marts/core/: dim_airport.sql  dim_carrier.sql  dim_date.sql  fact_flight_delays.sql  schema.yml
src/flight_performance_analytics_pipeline/dbt_transformations/models/staging/: schema.yml  stg_airline_delay_data.sql
src/flight_performance_analytics_pipeline/jobs/: __init__.py  daily_pipeline.py
src/flight_performance_analytics_pipeline/logging/: logging.py
src/flight_performance_analytics_pipeline/resources/: __init__.py  clickhouse_io_manager.py  postgres_resource.py
src/flight_performance_analytics_pipeline/schedules/: __init__.py  daily_schedule.py
src/flight_performance_analytics_pipeline/utils/: __init__.py  data_validators.py  load_postgres_utils.py  sql_loader.py
tests/unit/: test_dummy.py
tests/unit/src/assets/bronze/: test_airline_delay_checks.py  test_load_to_postgres.py
tests/unit/src/assets/gold/: test_dim_assets.py  test_fact_flight_delays.py  test_gold_checks.py
tests/unit/src/assets/silver/: __init__.py  test_dbt_staging_assets.py  test_staging_checks.py
tests/unit/src/jobs/: test_daily_pipeline.py
tests/unit/src/logging/: test_logging.py
tests/unit/src/schedules/: test_daily_schedule.py
tests/unit/src/utils/: test_load_postgres_utils.py  test_sql_loader.py
