[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "flight-performance-analytics-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.19",
    "dagster-dg-cli>=1.12.19",
    "dagster-postgres>=0.28.19",
    "dagster-webserver>=1.12.19",
    "fastexcel>=0.19.0",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]

[tool.uv.build-backend]
module-name = "flight_performance_analytics_pipeline"

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "I", "C", "B"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.bandit]
exclude_dirs = ["src/tests", "docs", "build", "dist", "venv", ".venv"]
skips = ["B101"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disable_error_code = "misc"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, no external services",
    "integration: requires postgres and clickhouse",
]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=8.0.0", "pytest-xdist>=3.0.0"]

[tool.dg]

# ("project", required) Marks this as a Dagster project.
directory_type = "project"

[tool.dg.project]

# (string, required) Specifies the root module of the project.
root_module = "flight_performance_analytics_pipeline" # this is required

# Defaults to `<root_module>.defs`.
defs_module = "flight_performance_analytics_pipeline.definitions"


# Defaults to `<root_module>.definitions`.
code_location_target_module = "flight_performance_analytics_pipeline.definitions"


code_location_name = "flight_performance_analytics_pipeline"

registry_modules = [
    "flight_performance_analytics_pipeline.alternate_components.*",
]

[tool.dg.cli]
